# COMS4995Project

./: .clang-format  CMakeLists.txt  Insights.txt  README  image  main.cpp
image.xcodeproj/: project.pbxproj
image.xcodeproj/project.xcworkspace/xcuserdata/yuechen.xcuserdatad/: UserInterfaceState.xcuserstate
image.xcodeproj/xcuserdata/yuechen.xcuserdatad/xcschemes/: xcschememanagement.plist
include/: Filters.hpp  Image.hpp  stb_image_write.h
source/: Filters.cpp  Image.cpp
src/: Filters.cpp  Image.cpp  interactive_app.cpp
test/: test.cpp  test_image.cpp  test_main.cpp
